--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -45,5 +45,5 @@ jobs:
           context: .
           push: true
           tags:
-            ghcr.io/GeoEstate/geoestate:latest
+            ghcr.io/geoestate/geoestate:latest
           labels: ${{ steps.meta.outputs.labels }}
