--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -42,8 +42,9 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
-          context: .
+          context: geoestate_server
           push: true
           tags:
             ghcr.io/geoestate/geoestate:latest
+
           labels: ${{ steps.meta.outputs.labels }}
